# xitroo_api

./: LICENSE  README.md  setup.cfg
docs/: index.html  search.js  xitroo.html
docs/xitroo/: Captcha.html  Inbox.html  Mail.html  Search.html  Xitroo.html  exceptions.html
src/: xitrooapi.py
src/unofficial_xitroo_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/xitroo/: Captcha.py  Inbox.py  Mail.py  Search.py  Xitroo.py  __init__.py  api.py  endpoints.py  exceptions.py
