[metadata]
name = xitroo_api
version = 1.0
author = InSuckaBlyat88
author_email = x.xxha001@gmail.com
description = Xitroo API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Th3K1n91/xitroo_api
project_urls =
    Bug Tracker = https://github.com/Th3K1n91/xitroo_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src